<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_by"
        android:orderInCategory="1"
        android:title="@string/sort_by"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/popular"
        android:orderInCategory="1"
        android:title="@string/popular_movie"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/toprated"
        android:orderInCategory="1"
        android:title="@string/toprated_movie"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/favorite"
        android:orderInCategory="1"
        android:title="@string/favorite_movie"
        app:showAsAction="collapseActionView"/>
</menu>