<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="400dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="5dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/overview_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/user_rating_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <TextView
            android:id="@+id/release_date_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>